--- a/templates/administration/viewlawyer.html
+++ b/templates/administration/viewlawyer.html
@@ -107,7 +107,7 @@
 
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="/home">🏠 Home</a>
+        <a href="/Admin_home">🏠 Home</a>
     </div>
 
     <h2>Manage Lawyer</h2>
