--- a/templates/administration/login.html
+++ b/templates/administration/login.html
@@ -56,7 +56,7 @@
 
          <input type="submit" value="Login" class="btnlogin"><br>
 
-         <a href="/councereg">Registration</a>
+         <a href="/CounsellorRegisterPage">Registration</a>
     </form>  
 
 </body>
