--- a/templates/administration/viewpolice.html
+++ b/templates/administration/viewpolice.html
@@ -173,7 +173,7 @@
 
 <!-- Navigation Bar -->
 <div class="navbar">
-    <a href="/home">🏠 Home</a>
+    <a href="/Admin_home">🏠 Home</a>
 </div>
 
 <div class="container">
