--- a/templates/administration/viewuser.html
+++ b/templates/administration/viewuser.html
@@ -87,7 +87,7 @@
 
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="/home">🏠 Home</a>
+        <a href="/Admin_home">🏠 Home</a>
     </div>
 
     <h2>User Details</h2>
